[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/characters/re_cv_sprites_v1_0_by_doubleleggy_d2hwj7w.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://grey_style.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/fonts/lucasarts-scumm-outline.fnt" type="BitmapFont" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="PanelContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.4
anchor_bottom = 0.75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Menu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 187.0
margin_bottom = 323.0

[node name="Label" type="Label" parent="Menu/VBox"]
margin_right = 180.0
margin_bottom = 14.0
text = "MENU"

[node name="HSeparator2" type="HSeparator" parent="Menu/VBox"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 22.0

[node name="Label2" type="Label" parent="Menu/VBox"]
margin_top = 26.0
margin_right = 180.0
margin_bottom = 40.0
text = "Player Name:"

[node name="HBox" type="HBoxContainer" parent="Menu/VBox"]
margin_top = 44.0
margin_right = 180.0
margin_bottom = 68.0

[node name="PlayerName" type="LineEdit" parent="Menu/VBox/HBox"]
margin_right = 112.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Randomize" type="Button" parent="Menu/VBox/HBox"]
margin_left = 116.0
margin_right = 180.0
margin_bottom = 24.0
text = "Random"

[node name="PlayerSelection" type="HBoxContainer" parent="Menu/VBox"]
margin_top = 72.0
margin_right = 180.0
margin_bottom = 136.0
alignment = 2

[node name="Appearance" type="TextureRect" parent="Menu/VBox/PlayerSelection"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
expand = true
stretch_mode = 5

[node name="PreviousChar" type="Button" parent="Menu/VBox/PlayerSelection"]
margin_left = 68.0
margin_right = 88.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "<"

[node name="NextChar" type="Button" parent="Menu/VBox/PlayerSelection"]
margin_left = 92.0
margin_right = 112.0
margin_bottom = 20.0
size_flags_vertical = 0
text = ">"

[node name="RandomizeTemplate" type="Button" parent="Menu/VBox/PlayerSelection"]
margin_left = 116.0
margin_right = 180.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "Random"

[node name="HSeparator" type="HSeparator" parent="Menu/VBox"]
margin_top = 140.0
margin_right = 180.0
margin_bottom = 144.0

[node name="Label3" type="Label" parent="Menu/VBox"]
margin_top = 148.0
margin_right = 180.0
margin_bottom = 162.0
text = "Server Address:"

[node name="ServerAddress" type="LineEdit" parent="Menu/VBox"]
margin_top = 166.0
margin_right = 180.0
margin_bottom = 190.0
text = "127.0.0.1:9876"
caret_blink = true
caret_blink_speed = 0.5

[node name="StartServer" type="Button" parent="Menu/VBox"]
margin_top = 194.0
margin_right = 180.0
margin_bottom = 214.0
text = "start server"

[node name="JoinGame" type="Button" parent="Menu/VBox"]
margin_top = 218.0
margin_right = 180.0
margin_bottom = 238.0
text = "join game"

[node name="Localgame" type="Button" parent="Menu/VBox"]
margin_top = 242.0
margin_right = 180.0
margin_bottom = 262.0
size_flags_vertical = 2
text = "local game"

[node name="HSeparator3" type="HSeparator" parent="Menu/VBox"]
margin_top = 288.0
margin_right = 180.0
margin_bottom = 292.0

[node name="Exit" type="Button" parent="Menu/VBox"]
margin_top = 296.0
margin_right = 180.0
margin_bottom = 316.0
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerInfo" type="PanelContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.75
margin_left = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="ServerInfo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 372.0
margin_bottom = 323.0

[node name="Label" type="Label" parent="ServerInfo/VBox"]
margin_right = 365.0
margin_bottom = 14.0
text = "SERVER INFO"

[node name="HSeparator" type="HSeparator" parent="ServerInfo/VBox"]
margin_top = 18.0
margin_right = 365.0
margin_bottom = 22.0

[node name="Label2" type="Label" parent="ServerInfo/VBox"]
margin_top = 26.0
margin_right = 365.0
margin_bottom = 40.0
text = "Connected Players:"

[node name="List" type="ItemList" parent="ServerInfo/VBox"]
margin_top = 44.0
margin_right = 365.0
margin_bottom = 292.0
size_flags_vertical = 3

[node name="Disconnect" type="Button" parent="ServerInfo/VBox"]
margin_top = 296.0
margin_right = 365.0
margin_bottom = 316.0
text = "disconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" type="VBoxContainer" parent="."]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="RichTextLabel" parent="Console"]
margin_right = 950.0
margin_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = ExtResource( 3 )
text = "Welcome..."
scroll_following = true

[node name="Title" type="Control" parent="."]
anchor_left = 0.2
anchor_top = 0.12
anchor_right = 0.4
anchor_bottom = 0.15
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scale" type="Node2D" parent="Title"]
scale = Vector2( 3, 3 )

[node name="Label" type="Label" parent="Title/Scale"]
margin_right = 74.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "AGENTS 0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/VBox/HBox/Randomize" to="." method="_on_Randomize_pressed"]
[connection signal="pressed" from="Menu/VBox/PlayerSelection/PreviousChar" to="." method="_on_PreviousChar_pressed"]
[connection signal="pressed" from="Menu/VBox/PlayerSelection/NextChar" to="." method="_on_NextChar_pressed"]
[connection signal="pressed" from="Menu/VBox/PlayerSelection/RandomizeTemplate" to="." method="_on_RandomizeTemplate_pressed"]
[connection signal="pressed" from="Menu/VBox/StartServer" to="." method="_on_StartServer_pressed"]
[connection signal="pressed" from="Menu/VBox/JoinGame" to="." method="_on_JoinGame_pressed"]
[connection signal="pressed" from="Menu/VBox/Localgame" to="." method="_on_Localgame_pressed"]
[connection signal="pressed" from="Menu/VBox/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ServerInfo/VBox/Disconnect" to="." method="_on_Disconnect_pressed"]
